# fire_simulator

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  TODO.txt  vcpkg.json
include/: fire_model_logger.hpp
lib/imgui/: CMakeLists.txt
src/: auth.cpp  auth.hpp  console.cpp  console.hpp  date.cpp  date.hpp  fire_fuel_model.hpp  fire_grid_coupled.hpp  fire_log.hpp  fire_model.cpp  fire_model.hpp  fire_model_logger.cpp  fire_profile.hpp  fire_results.cpp  fire_results.hpp  fire_simulator.cpp  fire_simulator.hpp  fuel_moisture.cpp  fuel_moisture.hpp  future.hpp  http.cpp  http.hpp  image_viewer.cpp  image_viewer.hpp  main.cpp  reference.cpp  reference.hpp  reference_database.cpp  reference_database.hpp  reference_eonet.cpp  reference_firms.cpp  service.cpp  service.hpp  service_custom.cpp  service_esa_worldcover.cpp  service_landfire.cpp  service_landfire.hpp  service_landfire_aspect.cpp  service_landfire_canopy_cover.cpp  service_landfire_canopy_height.cpp  (+11 more)
